# AoC

./: .gitignore  CMakeLists.txt  README.md
include/: solution.h  utils.h
src/: main.cpp  utils.cpp
